--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "@notionhq/client": "^0.2.2",
     "@vercel/analytics": "^0.1.3",
     "gh-pages": "^4.0.0",
-    "next": "^12.0.6",
+    "github-calendar": "^2.3.4",
+    "next": "^12.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-github-calendar": "^3.2.2",
     "react-pdf": "^5.7.2"
   }
 }
